--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -293,6 +293,35 @@
                                                         <outlet property="textField" destination="tOs-8Z-T1g" id="zp0-xC-noA"/>
                                                     </connections>
                                                 </tableCellView>
+                                                <tableCellView identifier="d" id="ksH-n0-sGf">
+                                                    <rect key="frame" x="71" y="20" width="161" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <subviews>
+                                                        <textField verticalHuggingPriority="750" id="9NX-II-pak" customClass="StepperTextField">
+                                                            <rect key="frame" x="0.0" y="-1" width="161" height="19"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="double" bezelStyle="round" id="4km-Sf-gY5">
+                                                                <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="#.###" negativeFormat="#.###" usesGroupingSeparator="NO" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="BDB-5a-Dzh"/>
+                                                                <font key="font" metaFont="smallSystem"/>
+                                                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="draggingMult">
+                                                                    <real key="value" value="0.01"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="increase" value="IncreaseStepper"/>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="alternateInc" value="AltIncreaseStepper"/>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="decrease" value="DecreaseStepper"/>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                            <connections>
+                                                                <binding destination="ksH-n0-sGf" name="editable" keyPath="objectValue.isEditable" id="3HR-ny-3Ya"/>
+                                                                <binding destination="ksH-n0-sGf" name="value" keyPath="objectValue.value" id="ejT-6n-eXz"/>
+                                                            </connections>
+                                                        </textField>
+                                                    </subviews>
+                                                </tableCellView>
                                                 <tableCellView identifier="degrees" id="ykA-kB-Fwq">
                                                     <rect key="frame" x="71" y="20" width="161" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -322,35 +351,6 @@
                                                                         <string key="NSValueTransformerName">DegreesTransformer</string>
                                                                     </dictionary>
                                                                 </binding>
-                                                            </connections>
-                                                        </textField>
-                                                    </subviews>
-                                                </tableCellView>
-                                                <tableCellView identifier="d" id="ksH-n0-sGf">
-                                                    <rect key="frame" x="71" y="20" width="161" height="17"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <subviews>
-                                                        <textField verticalHuggingPriority="750" id="9NX-II-pak" customClass="StepperTextField">
-                                                            <rect key="frame" x="0.0" y="-1" width="161" height="19"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="double" bezelStyle="round" id="4km-Sf-gY5">
-                                                                <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="#.###" negativeFormat="#.###" usesGroupingSeparator="NO" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="BDB-5a-Dzh"/>
-                                                                <font key="font" metaFont="smallSystem"/>
-                                                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                            </textFieldCell>
-                                                            <userDefinedRuntimeAttributes>
-                                                                <userDefinedRuntimeAttribute type="number" keyPath="draggingMult">
-                                                                    <real key="value" value="0.01"/>
-                                                                </userDefinedRuntimeAttribute>
-                                                                <userDefinedRuntimeAttribute type="image" keyPath="increase" value="IncreaseStepper"/>
-                                                                <userDefinedRuntimeAttribute type="image" keyPath="alternateInc" value="AltIncreaseStepper"/>
-                                                                <userDefinedRuntimeAttribute type="image" keyPath="decrease" value="DecreaseStepper"/>
-                                                                <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
-                                                            </userDefinedRuntimeAttributes>
-                                                            <connections>
-                                                                <binding destination="ksH-n0-sGf" name="editable" keyPath="objectValue.isEditable" id="3HR-ny-3Ya"/>
-                                                                <binding destination="ksH-n0-sGf" name="value" keyPath="objectValue.value" id="ejT-6n-eXz"/>
                                                             </connections>
                                                         </textField>
                                                     </subviews>
@@ -404,7 +404,7 @@
                             <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" headerView="h40-p5-Bi4" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="14" outlineTableColumn="UZW-3o-Jlu" id="HxU-5v-1iN">
+                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" headerView="h40-p5-Bi4" viewBased="YES" floatsGroupRows="NO" outlineTableColumn="UZW-3o-Jlu" id="HxU-5v-1iN">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -427,29 +427,26 @@
                                                     <rect key="frame" x="1" y="1" width="76" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="Iu5-YD-4BS">
-                                                            <rect key="frame" x="0.0" y="1" width="76" height="14"/>
+                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="tBL-Be-x9I">
+                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="14"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Group" id="JOT-tz-8bR">
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="left" title="Group" id="eG8-Wc-UOE">
                                                                 <font key="font" metaFont="smallSystemBold"/>
-                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                             <connections>
-                                                                <binding destination="7rC-7M-gVg" name="value" keyPath="objectValue.name" id="OMd-qQ-BNG"/>
+                                                                <binding destination="7rC-7M-gVg" name="value" keyPath="objectValue.name" id="GKx-BZ-ucK"/>
                                                             </connections>
                                                         </textField>
                                                     </subviews>
-                                                    <connections>
-                                                        <outlet property="textField" destination="Iu5-YD-4BS" id="Ueq-kj-AuA"/>
-                                                    </connections>
                                                 </tableCellView>
                                                 <tableCellView identifier="key" id="fRs-0f-VcJ">
                                                     <rect key="frame" x="1" y="20" width="76" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="tMk-yX-EtF">
-                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="17"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="14"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="name" id="zsv-zk-Ttf">
                                                                 <font key="font" metaFont="smallSystem"/>
