--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -167,7 +167,7 @@
                                                         <constraint firstAttribute="trailing" secondItem="tBL-Be-x9I" secondAttribute="trailing" id="jdH-4f-vyf"/>
                                                     </constraints>
                                                 </tableCellView>
-                                                <tableCellView identifier="key" id="fRs-0f-VcJ">
+                                                <tableCellView identifier="name" id="fRs-0f-VcJ">
                                                     <rect key="frame" x="1" y="20" width="76" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
@@ -179,12 +179,12 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                             <connections>
-                                                                <binding destination="fRs-0f-VcJ" name="value" keyPath="objectValue.name" id="xXp-Yg-71f">
+                                                                <binding destination="fRs-0f-VcJ" name="toolTip" keyPath="objectValue.name" id="3XK-fB-b0W">
                                                                     <dictionary key="options">
                                                                         <string key="NSValueTransformerName">AttibuteNameTransformer</string>
                                                                     </dictionary>
                                                                 </binding>
-                                                                <binding destination="fRs-0f-VcJ" name="toolTip" keyPath="objectValue.name" id="3XK-fB-b0W">
+                                                                <binding destination="fRs-0f-VcJ" name="value" keyPath="objectValue.name" id="xXp-Yg-71f">
                                                                     <dictionary key="options">
                                                                         <string key="NSValueTransformerName">AttibuteNameTransformer</string>
                                                                     </dictionary>
