--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -183,38 +183,27 @@
                                                     <rect key="frame" x="1" y="20" width="78" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="uGH-0z-bPA">
-                                                            <rect key="frame" x="0.0" y="0.0" width="78" height="20"/>
-                                                            <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="XZg-ys-F6V" userLabel="attribute">
-                                                                    <rect key="frame" x="4" y="3" width="70" height="14"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="attribute" id="rkw-uf-tbh">
-                                                                        <font key="font" metaFont="smallSystem"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                    <connections>
-                                                                        <binding destination="M03-u6-Cp5" name="value" keyPath="objectValue.name" id="5Rn-gn-EYj">
-                                                                            <dictionary key="options">
-                                                                                <string key="NSValueTransformerName">AttibuteNameTransformer</string>
-                                                                            </dictionary>
-                                                                        </binding>
-                                                                        <binding destination="M03-u6-Cp5" name="toolTip" keyPath="objectValue.description" id="Hbg-Q6-lM2"/>
-                                                                    </connections>
-                                                                </textField>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="XZg-ys-F6V" firstAttribute="leading" secondItem="uGH-0z-bPA" secondAttribute="leading" constant="6" id="17n-fl-kiy"/>
-                                                                <constraint firstAttribute="top" secondItem="XZg-ys-F6V" secondAttribute="bottom" constant="-17" id="6yw-Tk-ghi"/>
-                                                                <constraint firstAttribute="trailing" secondItem="XZg-ys-F6V" secondAttribute="trailing" constant="6" id="Dh5-pO-7Sa"/>
-                                                            </constraints>
-                                                        </customView>
+                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="XZg-ys-F6V" userLabel="attribute">
+                                                            <rect key="frame" x="4" y="3" width="70" height="14"/>
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="attribute" id="rkw-uf-tbh">
+                                                                <font key="font" metaFont="smallSystem"/>
+                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <connections>
+                                                                <binding destination="M03-u6-Cp5" name="toolTip" keyPath="objectValue.description" id="Hbg-Q6-lM2"/>
+                                                                <binding destination="M03-u6-Cp5" name="value" keyPath="objectValue.name" id="5Rn-gn-EYj">
+                                                                    <dictionary key="options">
+                                                                        <string key="NSValueTransformerName">AttibuteNameTransformer</string>
+                                                                    </dictionary>
+                                                                </binding>
+                                                            </connections>
+                                                        </textField>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="uGH-0z-bPA" firstAttribute="top" secondItem="M03-u6-Cp5" secondAttribute="top" id="AG4-2v-Bhy"/>
-                                                        <constraint firstItem="uGH-0z-bPA" firstAttribute="leading" secondItem="M03-u6-Cp5" secondAttribute="leading" id="Fsd-XM-YCE"/>
-                                                        <constraint firstAttribute="trailing" secondItem="uGH-0z-bPA" secondAttribute="trailing" id="tmu-JU-wcI"/>
-                                                        <constraint firstAttribute="bottom" secondItem="uGH-0z-bPA" secondAttribute="bottom" id="v8Y-u2-HxG"/>
+                                                        <constraint firstAttribute="top" secondItem="XZg-ys-F6V" secondAttribute="bottom" constant="-17" id="9QJ-cr-O6a"/>
+                                                        <constraint firstItem="XZg-ys-F6V" firstAttribute="leading" secondItem="M03-u6-Cp5" secondAttribute="leading" constant="6" id="gzU-Ja-nbj"/>
+                                                        <constraint firstAttribute="trailing" secondItem="XZg-ys-F6V" secondAttribute="trailing" constant="6" id="hex-ko-8Gh"/>
                                                     </constraints>
                                                     <connections>
                                                         <outlet property="textField" destination="XZg-ys-F6V" id="QqW-U5-rg1"/>
@@ -239,33 +228,22 @@
                                                     <rect key="frame" x="82" y="1" width="172" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="gbB-Zt-UX6">
-                                                            <rect key="frame" x="0.0" y="0.0" width="172" height="20"/>
-                                                            <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="5e3-B9-w1d">
-                                                                    <rect key="frame" x="-2" y="3" width="176" height="14"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="value" id="35B-li-VM5">
-                                                                        <font key="font" metaFont="smallSystem"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                    <connections>
-                                                                        <binding destination="qps-DR-4Ot" name="value" keyPath="objectValue.value" id="vDM-os-eNm"/>
-                                                                    </connections>
-                                                                </textField>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstAttribute="trailing" secondItem="5e3-B9-w1d" secondAttribute="trailing" id="Bxl-zL-fBy"/>
-                                                                <constraint firstAttribute="top" secondItem="5e3-B9-w1d" secondAttribute="bottom" constant="-17" id="dz0-hk-7d0"/>
-                                                                <constraint firstItem="5e3-B9-w1d" firstAttribute="leading" secondItem="gbB-Zt-UX6" secondAttribute="leading" id="lIZ-du-B1O"/>
-                                                            </constraints>
-                                                        </customView>
+                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="5e3-B9-w1d">
+                                                            <rect key="frame" x="-2" y="3" width="176" height="14"/>
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="value" id="35B-li-VM5">
+                                                                <font key="font" metaFont="smallSystem"/>
+                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                            <connections>
+                                                                <binding destination="qps-DR-4Ot" name="value" keyPath="objectValue.value" id="vDM-os-eNm"/>
+                                                            </connections>
+                                                        </textField>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="gbB-Zt-UX6" secondAttribute="bottom" id="Kna-8k-XKy"/>
-                                                        <constraint firstAttribute="trailing" secondItem="gbB-Zt-UX6" secondAttribute="trailing" id="cCh-jI-akR"/>
-                                                        <constraint firstItem="gbB-Zt-UX6" firstAttribute="leading" secondItem="qps-DR-4Ot" secondAttribute="leading" id="y5y-kX-4Uf"/>
-                                                        <constraint firstItem="gbB-Zt-UX6" firstAttribute="top" secondItem="qps-DR-4Ot" secondAttribute="top" id="zVD-Go-lSD"/>
+                                                        <constraint firstItem="5e3-B9-w1d" firstAttribute="leading" secondItem="qps-DR-4Ot" secondAttribute="leading" id="Hu2-uq-zV0"/>
+                                                        <constraint firstAttribute="trailing" secondItem="5e3-B9-w1d" secondAttribute="trailing" id="W4e-Lp-fT2"/>
+                                                        <constraint firstAttribute="top" secondItem="5e3-B9-w1d" secondAttribute="bottom" constant="-17" id="vue-lC-6ym"/>
                                                     </constraints>
                                                     <connections>
                                                         <outlet property="textField" destination="5e3-B9-w1d" id="vXo-S7-IUt"/>
